style(driver): Drop get, set, is method prefixes